--- a/iot_gps_app/pubspec.yaml
+++ b/iot_gps_app/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   geolocator: ^5.1.3
+  neat_periodic_task: ^1.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
